fix: improving footer spacing for larger screens

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -5,3 +5,9 @@
     padding: 1.5rem 0.5rem;
   }
 }
+
+@media (min-width: 720px) {
+  main {
+    margin-bottom: 146px;
+  }
+}
