--- a/src/app/dashboard/views/clients/clients.component.scss
+++ b/src/app/dashboard/views/clients/clients.component.scss
@@ -122,5 +122,9 @@
       font-size: 18px;
       justify-content: space-between;
     }
+
+    &__footer {
+      padding: 1rem;
+    }
   }
 }
